# MultiAgent_AI_ProjectBuilder

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Make.ps1  README-QUICKSTART.md  README.md  docker-compose.windows.yml
.github/workflows/: ci.yml
backend/: .env.sample  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/routers/: brief.py  ingest.py  llm.py  tasks.py
backend/app/services/: backend_agent.py  coordinator.py  file_utils.py  frontend_agent.py  llm_adapter.py  ocr_service.py  task_builder.py  vectorizer.py
backend/app/tests/: test_api.py  test_llm_adapter.py  test_vectorizer.py
backend/app/worker/: worker.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: sample.gltf
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ARPreview.tsx  Dashboard.tsx  Upload.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: ARPage.tsx  UploadPage.tsx
frontend/src/tests/: App.test.tsx  api.test.ts
